Fixed: Users can see the secrets they've liked

--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -3,7 +3,7 @@
   <% @secrets.each do |s| %>
       <p><%= s.content %></p>
       <p><%= s.likes.count %> likes</p>
-      <% if s.likes.count > 0 %>
+      <% if s.likes.count > 0  && s.user_id == session[:user_id] %>
         <form action="/likes/<%= s.user_id%>" method="post">
           <input type="hidden" name="_method" value="delete">
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
