--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -3,7 +3,8 @@
   <% @secrets.each do |s| %>
       <p><%= s.content %></p>
       <p><%= s.likes.count %> likes</p>
-      <% if s.likes.count > 0  && s.user_id == session[:user_id] %>
+      <% if s.users_liked.include?(current_user) %>
+      <%# if current_user.id == session[:user_id] && s.users_liked %>
         <form action="/likes/<%= s.user_id%>" method="post">
           <input type="hidden" name="_method" value="delete">
           <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
